<resources>
    <string name="app_name">ListViewApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="remember_me">remember_me</string>
    <string name="login">login</string>
    <string name="error_text">error_text</string>
    <string name="login_here">login_here</string>
    <string name="Login">Login</string>
    <string name="Welcome">Welcome</string>
    <string name="emailHere">email Here</string>
    <string name="enteremail">Enter Email</string>
    <string name="enterpassword">Enter Password</string>
    <string name="rememberme">Remember me</string>
</resources>