<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="90dp"
        android:layout_marginHorizontal="25dp"
        tools:context=".Login">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp">

            <TextView
                android:id = "@+id/login_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:hint="@string/enteremail"
                app:layout_constraintTop_toBottomOf="@+id/login_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                app:passwordToggleEnabled="true"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:hint="@string/enterpassword"
                app:layout_constraintTop_toBottomOf="@+id/email_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    tools:layout_editor_absoluteX="175dp"
                    tools:layout_editor_absoluteY="315dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/rememberme"
                app:layout_constraintTop_toBottomOf="@+id/password_layout"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:id="@+id/button_login"
                android:layout_width="100dp"
                android:layout_height="58dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_layout" />




            <TextView
                android:id="@+id/error_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_text"
                app:layout_constraintTop_toBottomOf="@id/button_login"
                android:background="@color/black"
                android:textColor="@color/white"
                android:padding="10dp"
                android:letterSpacing="0.2"
                android:layout_marginTop="10dp"
                android:visibility="invisible"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</ScrollView>